--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "tsc",
+    "build": "npx prisma generate && npx tsc",
     "start": "npx prisma migrate deploy && node dist/server.js",
     "seed": "npx prisma db seed",
     "postinstall": "prisma generate",
