--- a/backend/package.json
+++ b/backend/package.json
@@ -8,8 +8,8 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "npx prisma generate && npx tsc",
-    "start": "npm run build && npx prisma migrate deploy && node dist/server.js",
+    "build": "npx prisma generate && npx tsc --noEmitOnError",
+    "start": "node dist/server.js",
     "seed": "npx prisma db seed",
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
