--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,14 @@
   "name": "jansamadhan-backend",
   "version": "1.0.0",
   "description": "Backend API for Jan-Samadhan Portal",
-  "main": "dist/server.js",
+  "main": "dist/src/server.js",
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "tsc",
-    "start": "node dist/server.js",
+    "start": "node dist/src/server.js",
     "postinstall": "prisma generate",
     "prisma:generate": "prisma generate",
     "prisma:migrate": "prisma migrate dev",
