--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,7 +3,7 @@
     "target": "ES2020",
     "module": "commonjs",
     "lib": ["ES2020"],
-    "outDir": ".dist",
+    "outDir": "dist",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
@@ -16,6 +16,6 @@
     "types": ["node"]
   },
   "include": ["src/**/*", "prisma/**/*"],
-  "exclude": ["node_modules", ".dist"]
+  "exclude": ["node_modules", "dist"]
 }
 
