--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,49 @@
 # Dependencies
 node_modules/
 */node_modules/
+.pnp
+.pnp.js
+.yarn/cache
+.yarn/unplugged
+.yarn/build-state.yml
+.yarn/install-state.gz
 
 # Production builds
 dist/
 build/
 */dist/
 */build/
+out/
+.next/
+.nuxt/
 
 # Environment files
 .env
 .env.local
 .env.production
 .env.development
+.env.staging
+.env.test
 backend/.env
 contracts/.env
+*.env
 
 # Database
 *.db
 *.sqlite
+*.sqlite3
 backend/dev.db
 backend/prisma/dev.db
+prisma/migrations/
+*.db-journal
 
 # Logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+lerna-debug.log*
+.pnpm-debug.log*
 
 # Runtime data
 pids
@@ -36,12 +53,15 @@ pids
 
 # Coverage directory used by tools like istanbul
 coverage/
+*.lcov
+.nyc_output
 
 # IDE files
 .vscode/
 .idea/
 *.swp
 *.swo
+*~
 
 # OS generated files
 .DS_Store
@@ -51,24 +71,95 @@ coverage/
 .Trashes
 ehthumbs.db
 Thumbs.db
+desktop.ini
 
 # Uploads
 uploads/
 backend/uploads/
+public/uploads/
 
 # Cache
 .cache/
 .parcel-cache/
+.eslintcache
+.stylelintcache
 
 # Hardhat
 cache/
 artifacts/
 contracts/cache/
 contracts/artifacts/
+typechain/
+typechain-types/
 
 # TypeScript
 *.tsbuildinfo
+.tscache/
 
 # Temporary files
 tmp/
 temp/
+.tmp/
+
+# Testing
+.jest/
+jest_*
+.coverage/
+
+# Storybook
+.out
+.storybook-out
+storybook-static/
+
+# Vite
+.vite/
+
+# Webpack
+.webpack/
+
+# Rollup
+.rollup.cache/
+
+# Serverless
+.serverless/
+
+# Docker
+.dockerignore
+docker-compose.override.yml
+
+# Local development
+.local/
+local/
+
+# Backup files
+*.bak
+*.backup
+*.old
+
+# Lock files (uncomment if you want to ignore them)
+# package-lock.json
+# yarn.lock
+# pnpm-lock.yaml
+
+# Editor directories and files
+.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Miscellaneous
+*.tgz
+*.tar.gz
+.firebase/
+.vercel/
+.netlify/
+
+# Sentry
+.sentryclirc
+
+# Local Netlify folder
+.netlify
